# prefect-flows

./: hello.py  pyproject.toml
flows/: README.md
flows/etl-cicd-pipeline/: .env.example  README.md  filled-example-etl.py  flattened-data.txt  prefect.yaml  pyproject.toml  raw-data-example.txt  requirements.txt
flows/etl-s3-notification/: .gitignore  README.md  full-example-etl.py
flows/etl-s3-upload-pipeline/: README.md  filled-out-example-etl.py  pyproject.toml  simple-example-etl.py
flows/process-worker/: README.md  main.py
