[project]
name = "etl-cicd-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [    
    "boto3>=1.28.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "prefect-aws>=0.3.8",
    "prefect-email>=0.3.5",
    "prefect>=2.14.0",
    "pydantic>=2.0.0",
    "prefect-docker>=0.4.0"
]
